--- a/final-github-api/src/components/ModalUser/ModalUser.module.css
+++ b/final-github-api/src/components/ModalUser/ModalUser.module.css
@@ -8,13 +8,16 @@
   display: flex;
   align-items: center;
   justify-content: center;
+
+  animation: bgOpacity 0.5s ease;
 }
 
 .modal {
   color: #e6edf3;
   width: 800px;
   height: 450px;
-  background: #0d1117;
+  /* background: #0d1117; */
+  background: rgba(13, 17, 23, 0.8);
   border: 1px solid #353941;
   border-radius: 10px;
   padding: 20px;
@@ -22,6 +25,10 @@
 
   display: flex;
   flex-direction: column;
+  /* opacity: 0.9; */
+  backdrop-filter: blur(10px);
+
+  animation: slideInFromBottom 0.5s ease;
 }
 
 .headerModal {
@@ -105,4 +112,22 @@
 .slider {
   text-align: center;
   width: 100%;
+}
+
+@keyframes slideInFromBottom {
+  0% {
+    transform: translateY(150%);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+@keyframes bgOpacity {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
